[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - 简洁通用的群体智能引擎，预测万物"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    # Production WSGI server
    "gunicorn>=23.0.0",
    
    # LLM
    "openai>=1.0.0",
    
    # Knowledge graph (Graphiti + FalkorDB, self-hosted, replaces Zep Cloud)
    "graphiti-core[falkordb]>=0.23.0",
    
    # OASIS social media simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    # torch is only a transitive dep via camel-oasis -> sentence-transformers;
    # server has no GPU, so pin CPU build to avoid multi-GB NVIDIA CUDA packages (see tool.uv)
    "torch>=2.0.0",
    
    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection (non-UTF-8 text files)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # YAML parsing (LLM prompt management)
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dependency conflict: camel-oasis pins neo4j==5.23.0; graphiti-core needs neo4j>=5.26.0.
# This project uses FalkorDB (not Neo4j) for graph storage; neo4j is transitive only and unused at runtime,
# so override to a graphiti-compatible version.
[tool.uv]
override-dependencies = ["neo4j>=5.26.0"]

# Pin torch to PyTorch official CPU index (avoid NVIDIA CUDA packages on linux/x86_64)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
